--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -2,26 +2,7 @@
 
   <h1 class="text-center mt-5">新規投稿</h1>
 
-  <%= form_for(@article) do |f| %>
+  <%= render partial: 'form', locals: { article: @article } %>
 
-    <div class="form-group my-5">
-      <%= f.label :title, 'タイトル' %>
-      <%= f.text_field :title, class: "form-control" %>
-    </div>
-
-    <div class="form-group my-5">
-      <%= f.label :body, '本文' %>
-      <%= f.text_area :body, rows: 15, class: 'form-control' %>
-    </div>
-
-    <div class="form-group my-5">
-      <%= f.label :image, '画像' %>
-      <%= f.file_field :image %>
-    </div>
-
-
-    <%= f.submit nil, class: "btn btn-primary" %>
-
-  <% end %>
 
 </div>
