--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -2,27 +2,9 @@
 
   <h1 class="text-center mt-5">編集</h1>
 
-  <%= form_for(@article) do |f| %>
+  <%= render partial: 'form', locals: { article: @article } %>
 
-    <div class="form-group my-5">
-      <%= f.label :title, 'タイトル' %>
-      <%= f.text_field :title, class: "form-control" %>
-    </div>
+  <%= link_to "削除", article_path(@article), method: :delete, data: {confirm: "削除しますか？"}, class: "btn btn-danger mt-3 "%>
 
-    <div class="form-group my-5">
-      <%= f.label :body, '本文' %>
-      <%= f.text_area :body, rows: 15, class: 'form-control' %>
-    </div>
-
-    <div class="form-group my-5">
-      <%= f.label :image, '画像' %>
-      <%= f.file_field :image %>
-    </div>
-
-
-    <%= f.submit nil, class: "btn btn-primary"%>
-    <%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "削除しますか？"}, class: "btn btn-danger"%>
-
-  <% end %>
 
 </div>
