--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,8 +8,9 @@
           <h1 class="text-center"><%= @article.title %></h1>
           <!--          <h2 class="subheading">Problems look mighty small from 150 miles up</h2>-->
           <span class="meta text-center">投稿者
-              <a href="#"><%= @article %></a>
-            <%= @article.created_at.strftime("%Y年%m月%d日 %H時%M分") %></span>
+              <a href="#"><%= @article.user.profile.name %></a>
+            <p class="mt-0"><%= l @article.created_at, format: :long%></p>
+          </span>
         </div>
       </div>
     </div>
@@ -38,9 +39,9 @@
 <hr>
 
 <div class="container">
-  <%# if @article.user_id == current_user.id %>
-    <div class="text-center"><%= link_to "edit", edit_article_path(@article), style: "color: cornflowerblue" %></div>
-  <%# end %>
+  <% if @article.user_id == current_user.id %>
+    <%= link_to "edit", edit_article_path(@article), class: "btn btn-outline-primary" %>
+  <% end %>
 
 </div>
 
