--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,8 +27,19 @@
 
 
 <body style="margin-top: 60px">
+<%# if flash[:notice].present? %>
+<!--  <p class="alert alert-success text-center"><%#= flash[:notice]%></p>-->
+<%# end %>
+
 <% if flash[:notice] %>
-  <p class="alert alert-success text-center"><%= flash[:notice] %></p>
+    <div class="alert alert-success">
+      <%= flash[:notice] %>
+    </div>
+<% end %>
+<% if flash[:alert] %>
+    <div class="alert alert-danger">
+      <%= flash[:alert] %>
+    </div>
 <% end %>
 
 <%= yield %>
