--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <h1 class="text-center mt-5">編集</h1>
+  <h1 class="text-center mt-5 head_space">編集</h1>
 
   <%= render partial: 'form', locals: { article: @article } %>
 
