--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <h1 class="text-center mt-5">新規投稿</h1>
+  <h1 class="text-center mt-5 head_space">新規投稿</h1>
 
   <%= render partial: 'form', locals: { article: @article } %>
 
