--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,6 +1,12 @@
 <%= form_for article do |f| %>
 
   <div class="form-group my-5">
+      <%= f.label :image, "画像" %>
+      <%= f.attachment_field :image, class: "form-control-file"%>
+  </div>
+
+
+  <div class="form-group my-5">
     <%= f.label :title, 'タイトル' %>
     <%= f.text_field :title, class: "form-control" %>
   </div>
@@ -9,12 +15,6 @@
     <%= f.label :body, '本文' %>
     <%= f.text_area :body, rows: 15, class: 'form-control' %>
   </div>
-
-  <div class="form-group my-5">
-    <%= f.label :image, '画像' %>
-    <%= f.file_field :image %>
-  </div>
-
 
   <%= f.submit nil, class: "btn btn-primary"%>
 
