--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,6 @@
 <!-- Page Header -->
 <header class="masthead" style="background-image: url('https://blackrockdigital.github.io/startbootstrap-clean-blog/img/post-bg.jpg')">
+
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
@@ -9,7 +10,7 @@
           <!--          <h2 class="subheading">Problems look mighty small from 150 miles up</h2>-->
           <span class="meta text-center">投稿者
               <a href="#"><%= @article.user.profile.name %></a>
-            <p class="mt-0"><%= l @article.created_at, format: :long%></p>
+            <p class="mt-0"><%= l @article.created_at, format: :long %></p>
           </span>
         </div>
       </div>
@@ -20,28 +21,31 @@
 <!-- Post Content -->
 <article>
   <div class="container">
+
+
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <p><%= @article.body %></p>
-
-        <%# if @article.image? %>
-          <%#= image_tag @article.image.url %>
-          <%# else %>
-          <%#= image_tag "noimage.gif" %>
-        <%# end %>
-
-
       </div>
     </div>
+
+
+    <div>
+      <% if @article.image_id.present? %>
+        <%= image_tag attachment_url(@article, :image), class: "img-responsive", style: "max-height: 400px" %>
+      <% end %>
+    </div>
+
+
   </div>
 </article>
 
 <hr>
 
 <div class="container">
-  <% if @article.user_id == current_user.id %>
-    <%= link_to "edit", edit_article_path(@article), class: "btn btn-outline-primary" %>
-  <% end %>
+  <%# if @article.user_id == current_user.id %>
+  <%= link_to "edit", edit_article_path(@article), class: "btn btn-outline-primary" %>
+  <%# end %>
 
 </div>
 
