--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-light fixed-top bg-info" id="mainNav">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top bg-info", style="margin-bottom: 0px" id="mainNav">
   <div class="container">
     <a class="navbar-brand" style="padding: 15px 20px" href="/">
       <% if user_signed_in? %>
@@ -20,15 +20,15 @@
           <li class="nav-item">
             <a class="nav-link" href="http://localhost:3000/articles/">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/">About</a>
-          </li>
+<!--          <li class="nav-item">-->
+<!--            <a class="nav-link" href="/">About</a>-->
+<!--          </li>-->
           <li class="nav-item">
             <%= link_to "New Post", new_article_path, class: "nav-link" %>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/">Contact</a>
-          </li>
+<!--          <li class="nav-item">-->
+<!--            <a class="nav-link" href="/">Contact</a>-->
+<!--          </li>-->
 
           <li class="nav-item">
               <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link" %>
